<resources>
    <string name="app_name">Pocket</string>

    <string name="cart_title">Carrito de compra</string>
    <string name="cart_pay">Ordenar</string>

    <string name="product_create">Crear</string>
    <string name="product_empty_cart">Carrito Vacío</string>
    <string name="product_full_cart">Total: Q.%1$.2f</string>

    <string name="details_add_to_cart">Añadir al cartito</string>
    <string name="detail_quantity">Disponibles: Entrega Inmediata</string>
    <string name="detail_total_price">&lt;b>&lt;big>Total: Q.%1$.2f&lt;/big>&lt;/b>&lt;br>(%2$d x Q.%3$.2f)</string>
    <string name="recycler_price">12</string>


    <string name="order_track_shipment">Consultar Estado</string>
    <string name="order_estatus">Estado: %1$s</string>
    <string name="order_id">ID: %1$s</string>
    <string name="chip_chat_help">¿Necesitas ayuda?</string>
    <string name="order_title">Historial de Compras</string>

    <string name="order_status_ordered">Pedido</string>
    <string name="order_status_processing">Procesando</string>
    <string name="order_status_sent">Enviado</string>
    <string name="order_status_delivered">Entregado</string>
    <string name="order_status_unknown">Desconocido</string>

    <string name="track_title">Rastreo</string>
    <string name="hint_chat">Escribe algo...</string>
    <string name="chat_title">Soporte</string>

    <string name="notification_channel_id_default">general</string>
    <string name="notification_channel_name_default">Generales</string>
    <string name="hint_buscar">Buscar</string>
    <string name="textView_categorias">Categorías</string>
    <string name="destacados">Destacados</string>
    <string name="explorer">Explorar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar">Iniciar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_pocket">Pocket</string>
    <string name="nuevo">Nuevo</string>
    <string name="title_activity_login_new">LoginActivityNew</string>
    <string name="edit">Editar</string>
    <string name="back">Atras</string>
    <string name="logout">Salir</string>
    <string name="favoritos">Favoritos</string>
    <string name="no_favorites">Aun no tienes favoritos</string>
    <string name="quantity">Cantidad:</string>
    <string name="base_quantity">1</string>
    <string name="cart">Carrito</string>
    <string name="comments">Comentarios</string>
    <string name="type_your_comment">Escribe tu comentario...</string>
    <string name="send_comment">Enviar</string>
    <string name="comments_empty">No hay comentarios.</string>
    <string name="_0">0</string>
    <string name="delete_comments">Borrar Comentarios</string>
    <string name="close_description">Button to close cart activity</string>
    <string name="buy">COMPRAR</string>
    <string name="confirm_order">Confirmar pedido</string>
    <string name="efectivo">Efectivo</string>
    <string name="trasnferencia">Trasnferencia</string>
    <string name="tarjeta"><strike>Tarjeta</strike></string>
    <string name="q_symbol">Q.</string>


</resources>