<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".pages.ConfirmationActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="@dimen/common_padding_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/headergifbackbround"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/confirm_order"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_margin="@dimen/common_padding_min"
            android:background="@drawable/ic_close"
            android:contentDescription="@string/close_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintBottom_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/radio"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <pl.droidsonroids.gif.GifImageView
                    android:id="@+id/animationDone"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:background="@drawable/confirmation"
                    app:layout_constraintBottom_toTopOf="@+id/cardView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="@dimen/common_padding_min"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:clipToPadding="true"
                    app:cardCornerRadius="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/animationDone">

                    <ImageView
                        android:id="@+id/imgProduct"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:importantForAccessibility="no"
                        android:outlineAmbientShadowColor="@color/black"
                        android:scaleType="fitCenter"
                        tools:targetApi="p" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding_min"
                    android:layout_marginTop="@dimen/common_padding_min"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView"
                    tools:text="Samsung A12" />


                <TextView
                    android:id="@+id/tvTotalPriceQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/common_padding_min"
                    android:text="@string/q_symbol"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:drawableTint="@color/rojo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvName" />

                <TextView
                    android:id="@+id/tvTotalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    app:drawableTint="@color/rojo"
                    app:layout_constraintStart_toEndOf="@id/tvTotalPriceQ"
                    app:layout_constraintTop_toBottomOf="@+id/tvName"
                    tools:text="1,650" />


            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/radio_cash"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/footerButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <RadioButton
                        android:id="@+id/radio_cash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/efectivo"
                        android:textColor="@color/white"
                        tools:ignore="UsingOnClickInXml" />

                    <RadioButton
                        android:id="@+id/radio_transfer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/trasnferencia"
                        android:textColor="@color/white"
                        tools:ignore="UsingOnClickInXml" />

                    <RadioButton
                        android:id="@+id/radio_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/tarjeta"
                        android:textColor="@color/white"
                        tools:ignore="UsingOnClickInXml" />
                </RadioGroup>

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/footerButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_padding_default"
                android:gravity="center"
                android:text="@string/buy"
                app:icon="@drawable/ic_payment"
                app:iconGravity="textEnd"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>