<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".pages.HomeActivity"
    tools:ignore="ScrollViewCount">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cnlHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivHomeStack"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/pocketplaystore"
            android:scaleType="fitXY"
            android:src="@drawable/gradiant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBusqueda"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="130dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/border_redondo_search"
            android:hint="@string/hint_buscar"
            app:hintTextColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBusqueda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions" />
        </com.google.android.material.textfield.TextInputLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="180dp"
        app:layout_constraintTop_toBottomOf="@id/cnlHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_padding_min"
                    android:text="@string/textView_categorias" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/border_redondo_circular"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="@dimen/common_padding_min">

                    <ImageButton
                        android:id="@+id/ibCategoriesAcc"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:scaleType="fitXY"

                        android:src="@drawable/acc" />

                    <ImageButton
                        android:id="@+id/ibCategoriesPhone"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/phone" />

                    <ImageButton
                        android:id="@+id/ibCategoriesTablet"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginRight="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/ipad" />

                    <ImageButton
                        android:id="@+id/ibCategoriesArt"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/art" />

                    <ImageButton
                        android:id="@+id/ibCategoriesKiki"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/kikistorelogo" />

                    <ImageButton
                        android:id="@+id/ibCategoriesServices"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:scaleType="fitXY"
                        android:src="@drawable/fix" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_padding_min"
                    android:text="@string/destacados"
                    android:textSize="20dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_destacados"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"
                    tools:listitem="@layout/item_destacados" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/common_padding_min"
                    android:text="@string/explorer"
                    android:textSize="20dp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_explorar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_explorar" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>